# coreason-deep-research

./: AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  codecov.yml  langgraph.json  llms.txt  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
src/coreason_deep_research/: __init__.py  configuration.py  deep_researcher.py  main.py  state.py
src/coreason_deep_research/security/: auth.py
src/coreason_deep_research/utils/: __init__.py  logger.py
tests/: evaluators.py  extract_langsmith_data.py  pairwise_evaluation.py  prompts.py  run_evaluate.py  supervisor_parallel_evaluation.py  test_main.py  test_utils.py
